@@ -25,18 +25,21 @@ public class TestPublisher {
             System.err.println("ERROR: Domain Participant Factory not found");
             return;
         }
+        System.out.println("Publisher Created DomainParticipantFactory");
         DomainParticipant dp = dpf.create_participant(4,
             PARTICIPANT_QOS_DEFAULT.get(), null, DEFAULT_STATUS_MASK.value);
         if (dp == null) {
             System.err.println("ERROR: Domain Participant creation failed");
             return;
         }
+        System.out.println("Publisher Created DomainParticipant");
 
         MessageTypeSupportImpl servant = new MessageTypeSupportImpl();
         if (servant.register_type(dp, "") != RETCODE_OK.value) {
             System.err.println("ERROR: register_type failed");
             return;
         }
+        System.out.println("Publisher Registered MessageTypeSupportImpl");
 
         Topic top = dp.create_topic("Movie Discussion List",
                                     servant.get_type_name(),
@@ -47,6 +50,7 @@ public class TestPublisher {
             System.err.println("ERROR: Topic creation failed");
             return;
         }
+        System.out.println("Publisher Created Topic");
 
         Publisher pub = dp.create_publisher(PUBLISHER_QOS_DEFAULT.get(), null,
                                             DEFAULT_STATUS_MASK.value);
@@ -54,12 +58,16 @@ public class TestPublisher {
             System.err.println("ERROR: Publisher creation failed");
             return;
         }
+        System.out.println("Publisher Created Publisher");
 
         // Use the default transport configuration (do nothing)
 
-        DataWriterQosHolder qos = new DataWriterQosHolder();
+        DataWriterQosHolder qos = new DataWriterQosHolder(new DataWriterQos());
+        System.out.println("Publisher Get Default DataWriter QOS");
         pub.get_default_datawriter_qos(qos);
+        System.out.println("Publisher Set KEEP_ALL_HISTORY_QOS");
         qos.value.history.kind = HistoryQosPolicyKind.KEEP_ALL_HISTORY_QOS;
+        System.out.println("Publisher Create DataWriter");
         DataWriter dw = pub.create_datawriter(top,
                                               qos.value,
                                               null,
@@ -68,6 +76,7 @@ public class TestPublisher {
             System.err.println("ERROR: DataWriter creation failed");
             return;
         }
+        System.out.println("Publisher Created DataWriter");
 
         StatusCondition sc = dw.get_statuscondition();
         sc.set_enabled_statuses(PUBLICATION_MATCHED_STATUS.value);
@@ -87,6 +96,7 @@ public class TestPublisher {
             }
 
             if (matched.value.current_count >= 1) {
+                System.out.println("Publisher Matched");
                 break;
             }
 
